--- a/css/styles.css
+++ b/css/styles.css
@@ -1,7 +1,7 @@
-.bloc-1 .recette {
+.bloc-1 .recettes {
     background-color: #3c8320;
 }
-.bloc-1 .recette .menu {
+.bloc-1 .recettes .menu {
     list-style: none;
     padding-left: 0;
     margin-bottom: 0;
