--- a/css/styles.css
+++ b/css/styles.css
@@ -1,5 +1,19 @@
 .bloc-1 .recettes .menu {
+    display: flex;
+    flex-direction: column;
+    height: 100%;
+    justify-content: space-evenly;
     list-style: none;
-    padding-left: 0;
     margin-bottom: 0;
+    padding-left: 0;
+    text-align: center;
+}
+.bloc-1 .menu li a {
+    color: #FFFFFF;
+    display: block;
+    font-size: 1.2em;
+    font-weight: bold;
+    padding: 10px 20px;
+    text-decoration: none;
+    background-color: #1a8d74;
 }
