--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,8 @@
+body {
+    background-color: #cad2c5;
+    color: #2f3e46;
+}
+
 .bloc-1 .recettes .menu {
     display: flex;
     flex-direction: column;
@@ -9,8 +14,8 @@
     text-align: center;
 }
 .bloc-1 .menu li a {
-    background-color: #1a8d74;
-    color: #FFFFFF;
+    background-color: #52796f;
+    color: #84a98c;
     display: block;
     font-size: 1.2em;
     font-weight: bold;
