--- a/css/styles.css
+++ b/css/styles.css
@@ -1,6 +1,6 @@
 body {
-    background-color: #cad2c5;
-    color: #2f3e46;
+    background-color: #cad2c5 !important;
+    color: #2f3e46 !important;
 }
 
 .bloc-1 .recettes .menu {
