--- a/css/styles.css
+++ b/css/styles.css
@@ -15,7 +15,7 @@ body {
 }
 .bloc-1 .menu li a {
     background-color: #52796f;
-    color: #84a98c;
+    color: #FFFFFF;
     display: block;
     font-size: 1.2em;
     font-weight: bold;
