--- a/css/styles.css
+++ b/css/styles.css
@@ -2,6 +2,15 @@ body {
     background-color: #cad2c5 !important;
     color: #2f3e46 !important;
 }
+header nav a .navbar-brand {
+    color: #2f3e46 !important;
+    text-transform: uppercase;
+}
+header nav a:not(.navbar-brand) {
+    color: #2f3e46;
+    text-decoration: none;
+    text-transform: uppercase;
+}
 .bloc-1 .recettes .menu {
     display: flex;
     flex-direction: column;
